force-app/main/default/objects/Student__c/fields/Aadhar_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Card_Number__c</fullName>
    <label>Aadhar Card Number</label>
    <length>12</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>