force-app/main/default/objects/Student__c/fields/Class_Timing__c.field-meta.xml
<CustomField>
    <fullName>Class_Timing__c</fullName>
    <label>Class Timing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
                <default>true</default>
                <label>Morning</label>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>