force-app/main/default/objects/Student__c/fields/Classes_Starts_On__c.field-meta.xml
<CustomField>
    <fullName>Classes_Starts_On__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <inlineHelpText>Choose the classes starting date and time</inlineHelpText>
    <label>Classes Starts On</label>
    <type>DateTime</type>
</CustomField>