force-app/main/default/objects/Student__c/fields/Last_Class_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Last_Class_Percentage__c</fullName>
    <label>Last Class Percentage</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>