force-app/main/default/objects/Student__c/fields/Local_resisdence__c.field-meta.xml
<CustomField>
    <fullName>Local_resisdence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Local resisdence</label>
    <type>Checkbox</type>
</CustomField>