force-app/main/default/objects/Student__c/fields/Ratings_of_Assignment_and_Test__c.field-meta.xml
<CustomField>
    <fullName>Ratings_of_Assignment_and_Test__c</fullName>
    <label>Ratings of Assignment and Test</label>
    <summarizedField>Rating__c.Rating_Out_of_10__c</summarizedField>
    <summaryFilterItems>
        <field>Rating__c.Rating_For__c</field>
        <operation>equals</operation>
        <value>Assignment</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Rating__c.Rating_For__c</field>
        <operation>equals</operation>
        <value>Test</value>
    </summaryFilterItems>
    <summaryForeignKey>Rating__c.Student__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>