force-app/main/default/objects/Student__c/fields/Social_Media_Link__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Link__c</fullName>
    <inlineHelpText>Enter any social media link like Facebook, Twitter, Linkedin etc...</inlineHelpText>
    <label>Social Media Link</label>
    <type>Url</type>
</CustomField>