force-app/main/default/objects/Student__c/fields/Student_Address_GeoLocation__c.field-meta.xml
<CustomField>
    <fullName>Student_Address_GeoLocation__c</fullName>
    <inlineHelpText>Enter Student Permanent Address Geolocation</inlineHelpText>
    <label>Student Address GeoLocation</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>