force-app/main/default/objects/Student__c/fields/Student_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Student_Mobile__c</fullName>
    <label>Student Mobile</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>