force-app/main/default/objects/Student__c/fields/Student_s_State__c.field-meta.xml
<CustomField>
    <fullName>Student_s_State__c</fullName>
    <label>Student&apos;s State</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>