force-app/main/default/objects/Student__c/validationRules/Aadhar_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Aadhar_check</fullName>
    <active>true</active>
    <errorConditionFormula>IF(    ( LEN( Aadhar_Card_Number__c ) = 12 ) &amp;&amp; 
        (ISNUMBER(Aadhar_Card_Number__c ) 
       ),
    
   false,
    
   true
)</errorConditionFormula>
    <errorDisplayField>Aadhar_Card_Number__c</errorDisplayField>
    <errorMessage>Aadhar number should be 12 digit and should not contains any value other than numbers.</errorMessage>
</ValidationRule>