force-app/main/default/objects/Student__c/validationRules/Contact_number_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_number_check</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
     (LEN( Student_Mobile__c ) = 10) 
     &amp;&amp;
     ( ISNUMBER(Student_Mobile__c) ) 
    
   , false

   , true

)</errorConditionFormula>
    <errorDisplayField>Student_Mobile__c</errorDisplayField>
    <errorMessage>Contact Number should have 10 digits and shouldn&apos;t contain any special symbols or alphabets</errorMessage>
</ValidationRule>