force-app/main/default/objects/Student__c/validationRules/Course_fee.validationRule-meta.xml
<ValidationRule>
    <fullName>Course_fee</fullName>
    <active>true</active>
    <errorConditionFormula>Course_Fee__c  &lt; 5000</errorConditionFormula>
    <errorDisplayField>Course_Fee__c</errorDisplayField>
    <errorMessage>Course fee should be higher that 5000</errorMessage>
</ValidationRule>