force-app/main/default/objects/Student__c/validationRules/Dob_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Dob_Check</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
 YEAR(DATEVALUE(NOW())) - YEAR( Date_Of_Birth__c ) &lt;=18
,

 true, 

false)</errorConditionFormula>
    <errorMessage>Age must be greate than 18</errorMessage>
</ValidationRule>