force-app/main/default/objects/Student__c/validationRules/Registration_date_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Registration_date_check</fullName>
    <active>false</active>
    <errorConditionFormula>IF(
      ( Registration_Date__c &lt;  DATEVALUE(NOW()) ) 
       &amp;&amp;
      ( ADDMONTHS(DATEVALUE(NOW()),-1) &lt; Registration_Date__c )    
 , 

     false, 
 
     true
)</errorConditionFormula>
    <errorDisplayField>Registration_Date__c</errorDisplayField>
    <errorMessage>Registration date cannot be higher that today&apos;s date and more than  a month before from today.</errorMessage>
</ValidationRule>