force-app/main/default/objects/Student__c/validationRules/Student_name_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Student_name_check</fullName>
    <active>false</active>
    <errorConditionFormula>IF(
     REGEX( Student_Name__c , &apos;^[A-Za-z]+$&apos;) , 

    false, 
 
    true
)</errorConditionFormula>
    <errorDisplayField>Student_Name__c</errorDisplayField>
    <errorMessage>Student Should not contain numbers of any special character.</errorMessage>
</ValidationRule>