force-app/main/default/objects/Student__c/listViews/All_std_info.listView-meta.xml
<ListView>
    <fullName>All_std_info</fullName>
    <columns>NAME</columns>
    <columns>Age__c</columns>
    <columns>Course_Fee__c</columns>
    <columns>Student_Name__c</columns>
    <filterScope>Mine</filterScope>
    <label>All std info</label>
</ListView>